--- a/style.css
+++ b/style.css
@@ -1,9 +1,13 @@
 body {
 	margin-top: 30px;
+	color: black;
 }
 .btn-spacing {
 	margin-left: 5px;
 }
 td,th {
-	text-align: center
+	text-align: left;
+}
+.text-center {
+	color: pink;
 }
